--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="resume-section-content">
                 <h1 class="mb-0">
                     Rahul
-                    <span class="text-primary">Sharma</span>
+                    <span class="text-primary">Sharmaaaaaa</span>
                 </h1>
                 <div class="subheading mb-5">
                     Jaipur · Rajasthan, 322201 · (+91) 8078616891 ·
