--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                         href="https://www.linkedin.com/in/rahul-sharma-9a714516b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6XEii7rxSkalVQcVdy1FmQ%3D%3D"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/darthvaderrr-21"><i class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a> -->
+                    <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                 </div>
             </div>
         </section>
@@ -76,11 +76,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Developer</h3>
                         <div class="subheading mb-3">Exposys Data Labs</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of
-                            the day, going forward, a new normal that has evolved from generation X is on the runway
-                            heading towards a streamlined cloud solution. User generated content in real-time will have
-                            multiple touchpoints for offshoring.
-                            <br>
+                        <p>
                         <ul>
                             <li>Provide fully responsive food delivery website.<br></li>
                             <li>Real-time updates of the order status managed by the admin.<br></li>
@@ -273,7 +269,7 @@
                       
                 <!-- ================= -->
 
-                <div class="subheading mb-3">Web development workflow</div>
+                <!-- <div class="subheading mb-3">Web development workflow</div>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -292,7 +288,7 @@
                         Agile Development & Scrum
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </section>
         <hr class="m-0" />
 
@@ -319,7 +315,8 @@
                 <div class="icontainer">
                   <img src="assets/img/project.jpg" alt="Avatar" class="img">
                   <div class="overlay">
-                    <div class="text">Food delivery Website which works in real-time using EJS, SASS , Javascript , NodeJs, MongoDb and Socket.io. </div>
+                    <!-- <div class="text">Food delivery Website which works in real-time using EJS, SASS , Javascript , NodeJs, MongoDb and Socket.io. </div> -->
+                    <a href="https://github.com/darthvaderrr-21/realtime-pizza-website" class="text">Food delivery Website which works in real-time using EJS, SASS , Javascript , NodeJs, MongoDb and Socket.io. </a>
                   </div>
                 </div>
               </div>
@@ -338,7 +335,7 @@
                 <div class="icontainer">
                   <img src="assets/img/project.jpg" alt="Avatar" class="img">
                   <div class="overlay">
-                    <div class="text">35+ wireframes of MNIT college website in Adobe XD alongside with basic implementation of database. </div>
+                    <a href="https://github.com/darthvaderrr-21/mnit-website" class="text">35+ wireframes of MNIT college website in Adobe XD alongside with basic implementation of database. </a>
                   </div>
                 </div>
               </div>
@@ -355,7 +352,7 @@
                 <div class="icontainer">
                   <img src="assets/img/project.jpg" alt="Avatar" class="img">
                   <div class="overlay">
-                    <div class="text">A static web-application for promoting products on amazon using HTML, CSS, JavaScript </div>
+                    <a href="https://github.com/darthvaderrr-21/affiliate" class="text">A static web-application for promoting products on amazon using HTML, CSS, JavaScript </a>
                   </div>
                 </div>
               </div>
