--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="text-primary">Sharma</span>
                 </h1>
                 <div class="subheading mb-5">
-                    Jaipur · Rajasthan, 322201 · (+91) 8078616891 ·
+                    Jaipur · Rajasthan, 322201 · (+91)  ·
                     <a href="mailto:rahulofficials88@gmail.com">rahulofficials88@gmail.com</a>
                 </div>
                 <p class="lead mb-5">A software and web-development enthusiast , always ready to enhance my skills and
