--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">.about()</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">.experience()</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">.education()</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">.skills()</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">.projects()</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">.interests()</a></li>
                 <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
             </ul>
         </div>
